[gd_scene load_steps=18 format=2]

[ext_resource path="res://img/NUEVO/FONDO.png" type="Texture" id=1]
[ext_resource path="res://img/cuadro.png" type="Texture" id=2]
[ext_resource path="res://img/letra.png" type="Texture" id=3]
[ext_resource path="res://img/Gato/6.png" type="Texture" id=4]
[ext_resource path="res://img/flecha_iz.png" type="Texture" id=5]
[ext_resource path="res://script/Seleccion.gd" type="Script" id=6]
[ext_resource path="res://script/NinePatchRect.gd" type="Script" id=7]
[ext_resource path="res://img/b4_on.png" type="Texture" id=8]
[ext_resource path="res://sound/Ambient-1.ogg" type="AudioStream" id=10]
[ext_resource path="res://fuentes/arial.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://fuentes/Pocket Money.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://img/btn_salir.png" type="Texture" id=13]
[ext_resource path="res://img/salir.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 11 )

[node name="Seleccion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="menu" type="Node2D" parent="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/menu"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/menu"]
pause_mode = 2
margin_left = 634.0
margin_top = 478.0
margin_right = 741.0
margin_bottom = 636.0
texture_normal = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/menu"]
pause_mode = 2
margin_left = 1288.0
margin_top = 470.0
margin_right = 1395.0
margin_bottom = 628.0
texture_normal = ExtResource( 5 )
flip_h = true

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/menu"]
margin_left = 848.0
margin_top = 278.0
margin_right = 1198.0
margin_bottom = 878.0
texture = ExtResource( 2 )
script = ExtResource( 7 )

[node name="image" type="TextureRect" parent="CanvasLayer/menu/NinePatchRect"]
margin_left = 80.0
margin_top = 200.0
margin_right = 280.0
margin_bottom = 400.0
texture = ExtResource( 4 )
expand = true

[node name="TextureRect2" type="Sprite" parent="CanvasLayer/menu"]
position = Vector2( 1005, 182 )
texture = ExtResource( 3 )

[node name="bplayer" type="TextureButton" parent="CanvasLayer/menu"]
pause_mode = 2
margin_left = 816.0
margin_top = 920.0
margin_right = 1298.0
margin_bottom = 1040.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/menu"]
visible = false
margin_left = 826.0
margin_top = 232.0
margin_right = 1842.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 1 )
align = 1
max_length = 16
editable = false
placeholder_text = "Nombre"

[node name="restric" type="Control" parent="CanvasLayer/menu"]
visible = false
margin_left = 952.0
margin_top = -685.0
margin_right = 992.0
margin_bottom = -645.0

[node name="Label2" type="Label" parent="CanvasLayer/menu/restric"]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
self_modulate = Color( 1, 1, 1, 0.431373 )
margin_left = 269.0
margin_top = 1002.0
margin_right = 467.0
margin_bottom = 1053.0
custom_fonts/font = SubResource( 4 )
text = "Nombre vacio"
align = 1
valign = 1

[node name="Juega" type="Label" parent="CanvasLayer"]
pause_mode = 2
margin_left = 1595.0
margin_top = 957.0
margin_right = 1771.0
margin_bottom = 1070.0
custom_fonts/font = SubResource( 3 )
text = "Jugar yaaaaa"

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 143.0
margin_top = 937.0
margin_right = 546.0
margin_bottom = 1069.0
custom_fonts/font = SubResource( 5 )
text = "PUNTOS: 0"
align = 1

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 37.0
margin_top = 29.0
margin_right = 125.0
margin_bottom = 105.0
texture_normal = ExtResource( 14 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer"]
visible = false
margin_left = 161.0
margin_top = 17.0
margin_right = 263.0
margin_bottom = 127.0
texture_normal = ExtResource( 13 )
expand = true

[node name="text" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CanvasLayer/menu/TextureButton" to="CanvasLayer/menu/NinePatchRect" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/menu/TextureButton2" to="CanvasLayer/menu/NinePatchRect" method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/menu/bplayer" to="." method="_on_bplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="timeout" from="text" to="." method="_on_text_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
